<resources>
    <string name="app_name">Market Colombia</string>
    <string name="txt_user">User name</string>
    <string name="txt_hint_user">email@domain.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_hint_password">your password</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="decription_logo_mc">Market Colombia</string>
    <string name="txt_accep_term_cond">Accept terms and conditions</string>
    <string name="txt_term_cond">Terms and conditions</string>
    <string name="txt_name">Name</string>
    <string name="txt_lastname">Last name</string>
    <string name="txt_email">email</string>
    <string name="txt_cel">Number phone</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_visit_first">Visit for the first time?</string>
    <string name="txt_register_now">Register now!</string>
    <string name="txt_welcome">Welcome to Market Colombia</string>
    <string name="txt_already_account">Already have an account</string>
    <string name="txt_click_register">Register</string>
    <string name="txt_click_login">Logged in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrator</string>
    <string name="nav_header_subtitle">admin@admin.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_myshopping">My shopping</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_myaccount">My account</string>


    <string-array name="categories">
        <item>Seleccionar categoria</item>
        <item>Vehicles</item>
        <item>Home</item>
        <item>Technology</item>
        <item>Home and furniture</item>
        <item>Sports and fitness</item>
        <item>Beauty and personal care</item>
        <item>Fashion</item>
        <item>Games and toys</item>
    </string-array>

    <string name="term_and_conditions">INFORMACIÓN RELEVANTE \n \n
        Es requisito necesario para la adquisición de los productos que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios así como la compra de nuestros productos implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los productos  que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En algunos casos, para adquirir un producto, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña.
        \n
        El usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la compra de alguno de nuestros productos. marketcolombia.com no asume la responsabilidad en caso de que entregue dicha clave a terceros.
        Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, están sujetas a un proceso de confirmación y verificación, el cual podría incluir la verificación del stock y disponibilidad de producto, validación de la forma de pago, validación de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificación por medio de correo electrónico.
        Los precios de los productos ofrecidos en esta Tienda Online es válido solamente en las compras realizadas en este sitio web.
        \n \n
        LICENCIA \n
        Market Colombia  a través de su sitio web concede una licencia para que los usuarios utilicen  los productos que son vendidos en este sitio web de acuerdo a los Términos y Condiciones que se describen en este documento.
        \n \n
        USO NO AUTORIZADO \n
        En caso de que aplique (para venta de software, templetes, u otro producto de diseño y programación) usted no puede colocar uno de nuestros productos, modificado o sin modificar, en un CD, sitio web o ningún otro medio y ofrecerlos para la redistribución o la reventa de ningún tipo.
        \n\n
        PROPIEDAD \n
        Usted no puede declarar propiedad intelectual o exclusiva a ninguno de nuestros productos, modificado o sin modificar. Todos los productos son propiedad  de los proveedores del contenido. En caso de que no se especifique lo contrario, nuestros productos se proporcionan  sin ningún tipo de garantía, expresa o implícita. En ningún esta compañía será  responsables de ningún daño incluyendo, pero no limitado a, daños directos, indirectos, especiales, fortuitos o consecuentes u otras pérdidas resultantes del uso o de la imposibilidad de utilizar nuestros productos.
        \n\n
        POLÍTICA DE REEMBOLSO Y GARANTÍA \n
        En el caso de productos que sean  mercancías irrevocables no-tangibles, no realizamos reembolsos después de que se envíe el producto, usted tiene la responsabilidad de entender antes de comprarlo.  Le pedimos que lea cuidadosamente antes de comprarlo. Hacemos solamente excepciones con esta regla cuando la descripción no se ajusta al producto. Hay algunos productos que pudieran tener garantía y posibilidad de reembolso pero este será especificado al comprar el producto. En tales casos la garantía solo cubrirá fallas de fábrica y sólo se hará efectiva cuando el producto se haya usado correctamente. La garantía no cubre averías o daños ocasionados por uso indebido. Los términos de la garantía están asociados a fallas de fabricación y funcionamiento en condiciones normales de los productos y sólo se harán efectivos estos términos si el equipo ha sido usado correctamente. Esto incluye:
        \n\n
        – De acuerdo a las especificaciones técnicas indicadas para cada producto. \n \n
        – En condiciones ambientales acorde con las especificaciones indicadas por el fabricante. \n \n
        – En uso específico para la función con que fue diseñado de fábrica. \n \n
        – En condiciones de operación eléctricas acorde con las especificaciones y tolerancias indicadas. \n \n

        COMPROBACIÓN ANTIFRAUDE \n
        La compra del cliente puede ser aplazada para la comprobación antifraude. También puede ser suspendida por más tiempo para una investigación más rigurosa, para evitar transacciones fraudulentas.
        \n\n
        PRIVACIDAD \n
        Este marketcolombia.com garantiza que la fc barcelona noticias información personal que usted envía cuenta con la seguridad necesaria. Los datos ingresados por usuario o en el caso de requerir una validación de los pedidos no serán entregados a terceros, salvo que deba ser revelada en cumplimiento a una orden judicial o requerimientos legales.
        \n\n
        La suscripción a boletines de correos electrónicos publicitarios es voluntaria y podría ser seleccionada al momento de crear su cuenta.
        Market Colombia reserva los derechos de cambiar o de modificar estos términos sin previo aviso.\n\n
        Estas terminos y condiciones se han generado en terminosycondicionesdeusoejemplo.com.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_buy">Buy</string>


</resources>