<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.apppruebasmisiontic.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.apppruebasmisiontic.ui.gallery.GalleryFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_myshopping"
        android:name="com.example.apppruebasmisiontic.ui.cartbuy.CartBuyFragment"
        android:label="@string/menu_myshopping"
        tools:layout="@layout/fragment_cart_buy" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.apppruebasmisiontic.ui.favorite.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

</navigation>