<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_marketcolombia_hor"
            android:contentDescription="@string/decription_logo_mc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/txt_name"/>

                <EditText
                    android:id="@+id/edt_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/App_EditTextStyle"
                    android:autofillHints="48dp"
                    android:minHeight="48dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/txt_lastname"/>

                <EditText
                    android:id="@+id/edt_lastname_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/App_EditTextStyle"
                    android:autofillHints="48dp"
                    android:minHeight="48dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_email"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"/>

        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_user"
            android:autofillHints="48dp"
            android:minHeight="48dp"
            style="@style/App_EditTextStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edt_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="48dp"
            android:minHeight="48dp"
            style="@style/App_EditTextStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cel"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edt_cel_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="48dp"
            android:minHeight="48dp"
            style="@style/App_EditTextStyle"/>

        <CheckBox
            android:id="@+id/chb_term_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_term_cond"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/txt_register"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:elevation="15dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="10"
                android:src="@drawable/logo_facebook"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="10"
                android:src="@drawable/logo_google"
                style="@style/Widget.MaterialComponents.TimePicker.ImageButton"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="75dp"
                android:src="@drawable/logo_twitter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_already_account"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/txt_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                android:clickable="true"
                android:textColor="@color/purple_700"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>